feat: added dependencies and workspace

--- a/fs-web/package.json
+++ b/fs-web/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
-    "fs-hooks": "^0.0.1"
+    "fs-hooks": "^0.0.1",
+    "fs-ui": "^1.0.0"
   }
 }
