--- a/fs-hooks/tsconfig.json
+++ b/fs-hooks/tsconfig.json
@@ -22,5 +22,5 @@
     "jsx": "react-jsx",
     "types": ["vitest/globals"]
   },
-  "include": ["src"]
+  "include": ["CostCalculator/*", "index.ts", "vite-env.d.ts"]
 }
