--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "repository": "https://github.com/stelishDev/foodstuffs-challenge.git",
   "author": "Steve Kelly <stevek@talspot.com>",
   "license": "MIT",
-  "workspaces": ["fs-web", "fs-hooks", "fs-ui"],
+  "workspaces": [
+    "fs-web",
+    "fs-hooks",
+    "fs-ui"
+  ],
   "scripts": {
     "hooks:test": "workspace fs-hooks test"
   }
