--- a/fs-ui/package.json
+++ b/fs-ui/package.json
@@ -1,8 +1,11 @@
 {
   "name": "fs-ui",
-  "private": true,
+  "author": {
+    "name": "Steve Kelly",
+    "email": "stevek@talspot.com"
+  },
   "version": "0.0.1",
-  "type": "module",
+  "license": "MIT",
   "scripts": {
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -10,7 +13,6 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "postcss-import": "^16.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -24,6 +26,7 @@
     "@storybook/react": "^7.6.15",
     "@storybook/react-vite": "^7.6.15",
     "@storybook/test": "^7.6.15",
+    "@testing-library/react": "^14.2.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -35,7 +38,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
+    "fs-hooks": "^0.0.1",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.0.0",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^7.6.15",
     "tailwindcss": "^3.4.1",
