--- a/fs-web/package.json
+++ b/fs-web/package.json
@@ -23,8 +23,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0",
-    "fs-hooks": "^0.0.1",
-    "fs-ui": "^1.0.0"
+    "vite": "^5.1.0"
   }
 }
